[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "concisepost"
version = "1.0.0"
description = "Local-first inter-agent message optimization: compression, prompt-cache alignment, and infinite-loop prevention for multi-agent LLM systems."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ConcisePost", email = "founders@concisepost.dev" }]
keywords = [
    "llm",
    "agents",
    "multi-agent",
    "prompt-caching",
    "token-optimization",
    "crewai",
    "langgraph",
    "fastapi",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

# Runtime dependencies — everything needed to run the SDK and the API server.
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "asyncpg>=0.29,<1.0",
    "pydantic>=2.7,<3.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# Local development / CI tooling.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/concisepost/concisepost"
Repository = "https://github.com/concisepost/concisepost"
Issues = "https://github.com/concisepost/concisepost/issues"

# ----------------------------------------------------------------------------
# Packaging — this repo has a flat layout with two importable top-level
# packages: the `concisepost` SDK and the `server` API app. Declaring both means
# `pip install -e .` exposes `concisepost.core` and `server.main:app`.
# ----------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["concisepost", "server"]

[tool.hatch.build.targets.sdist]
include = ["concisepost", "server"]

# Ship the SQL blueprint inside the package so it is always available.
[tool.hatch.build.targets.wheel.force-include]
"server/schema.sql" = "server/schema.sql"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
